# simple-video-preview

./: .gitignore  README.md  preview.example.json  pyproject.toml
scripts/: grab_frame.py
src/simple_video_preview/: __init__.py  app.py  capture_support.py  cli.py  config.py  devices.py  frame_grabber.py
tests/: test_app.py  test_config.py  test_devices.py  test_frame_grabber.py
